--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mongoose": "^8.9.3",
-    "nocache": "^4.0.0"
+    "nocache": "^4.0.0",
+    "nodemon": "^3.1.9"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
